--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -22,11 +22,12 @@ body{
   padding:18px;
   background:linear-gradient(180deg,#eef2ff,#f8fafc);
   font-family:Inter,Arial,sans-serif;
+  color:var(--text);
 }
 .container{
   max-width:1100px;
   margin:auto;
-  background:#fff;
+  background:var(--card);
   border-radius:30px;
   padding:30px;
   box-shadow:0 35px 80px rgba(0,0,0,.12);
@@ -57,27 +58,30 @@ button{
   margin-top:6px;
   cursor:pointer;
 }
+.lista .item:hover{background:#e2e8f0}
 .badge{
   display:inline-block;
   margin-top:10px;
-  padding:6px 14px;
+  padding:8px 16px;
   border-radius:999px;
   background:#e0f2fe;
   font-weight:800;
   font-size:12px;
 }
+.badge.warn{background:var(--warn)}
 .grid{
   display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr 1fr auto;
+  grid-template-columns:2fr 1fr 1fr 1fr auto;
   gap:8px;
 }
 .ing{
   background:#f8fafc;
   border-radius:14px;
-  padding:10px 14px;
+  padding:12px 16px;
   margin-top:6px;
   display:flex;
   justify-content:space-between;
+  font-size:13px;
 }
 .kpis{
   display:grid;
@@ -92,10 +96,13 @@ button{
   text-align:center;
   font-weight:800;
 }
+.kpi span{display:block;margin-top:6px;font-size:18px}
 img.preview{
-  max-width:180px;
-  border-radius:16px;
-  margin-top:10px;
+  width:100%;
+  max-height:220px;
+  object-fit:cover;
+  border-radius:20px;
+  margin-top:12px;
 }
 </style>
 </head>
@@ -107,26 +114,33 @@ img.preview{
 
 <!-- PRODUTO -->
 <label>Produto (prato)</label>
-<input id="buscaProduto">
+<input id="buscaProduto" placeholder="Digite o nome do produto">
 <div id="listaProduto" class="lista"></div>
-<div id="infoProduto" class="badge"></div>
+<div id="produtoSelecionadoBadge" class="badge" style="display:none"></div>
 
 <label>Foto do prato</label>
-<input type="file" id="foto">
-<img id="preview" class="preview" style="display:none">
+<input type="file" id="fotoProduto" accept="image/*">
+<img id="previewFoto" class="preview" style="display:none">
 
+<!-- INGREDIENTES -->
 <h3>🍳 Ingredientes</h3>
 
 <label>Buscar ingrediente</label>
-<input id="buscaIngrediente">
+<input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
 <div id="listaIngrediente" class="lista"></div>
+<div id="ingredienteSelecionadoBadge" class="badge" style="display:none"></div>
 
 <div class="grid">
   <input id="qtd" type="number" placeholder="Qtd usada">
-  <select id="unUso"></select>
+  <select id="unUso">
+    <option value="UN">UN</option>
+    <option value="KG">KG</option>
+    <option value="G">G</option>
+    <option value="L">L</option>
+    <option value="ML">ML</option>
+  </select>
+  <input id="custo" readonly placeholder="Custo unit">
   <input id="rend" type="number" placeholder="Rend %">
-  <input id="unOrig" readonly placeholder="Un origem">
-  <input id="custoOrig" readonly placeholder="Custo origem">
   <button onclick="addIngrediente()">+</button>
 </div>
 
@@ -136,10 +150,10 @@ img.preview{
 <input id="rendimentoFinal" type="number" value="1" oninput="render()">
 
 <div class="kpis">
-  <div class="kpi">CMV Total<br><span id="cmvTotal">R$ 0,00</span></div>
-  <div class="kpi">CMV Unit<br><span id="cmvUnit">R$ 0,00</span></div>
-  <div class="kpi">Preço Venda<br><span id="precoVenda">R$ 0,00</span></div>
-  <div class="kpi">Margem<br><span id="margem">0%</span></div>
+  <div class="kpi">CMV Total<span id="cmvTotal">R$ 0,00</span></div>
+  <div class="kpi">CMV Unit<span id="cmvUnit">R$ 0,00</span></div>
+  <div class="kpi">Preço Venda<span id="precoVenda">R$ 0,00</span></div>
+  <div class="kpi">Margem<span id="margem">0%</span></div>
 </div>
 
 <button onclick="salvar()" style="margin-top:28px">Salvar Ficha Técnica</button>
@@ -148,33 +162,22 @@ img.preview{
 
 <script>
 const sb = supabase.createClient(
- "https://dsngsuetvucxeztbgbtb.supabase.co",
- "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
+  "https://dsngsuetvucxeztbgbtb.supabase.co",
+  "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
 );
 
-/* ===== UNIDADES ===== */
-const UNIDADES={
- g:{base:"g", fator:1},
- kg:{base:"g", fator:1000},
- ml:{base:"ml", fator:1},
- l:{base:"ml", fator:1000},
- un:{base:"un", fator:1},
- pct:{base:"un", fator:1},
- cx:{base:"un", fator:1}
-};
+let produto=null;
+let ingrediente=null;
+let ingredientes=[];
+let cmv=0;
 
-Object.keys(UNIDADES).forEach(u=>{
-  unUso.innerHTML+=`<option value="${u}">${u}</option>`;
-});
+const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-const moeda=v=>Number(v||0).toLocaleString("pt-BR",{style:"currency",currency:"BRL"});
-
-let produto=null, ingrediente=null, ingredientes=[], cmv=0;
-
-/* ===== FOTO ===== */
-foto.onchange=()=>{
-  preview.src=URL.createObjectURL(foto.files[0]);
-  preview.style.display="block";
+fotoProduto.onchange=()=>{
+  const f=fotoProduto.files[0];
+  if(!f)return;
+  previewFoto.src=URL.createObjectURL(f);
+  previewFoto.style.display="block";
 };
 
 /* ===== PRODUTO ===== */
@@ -185,7 +188,9 @@ buscaProduto.onkeyup=async()=>{
   listaProduto.innerHTML="";
   j.items.forEach(p=>{
     listaProduto.innerHTML+=`
-      <div class="item" onclick="selectProduto(${p.id},'${p.descricao}','${p.unidadeDeVenda}')">${p.descricao}</div>`;
+      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
+        ${p.descricao}
+      </div>`;
   });
 };
 
@@ -197,8 +202,9 @@ async function selectProduto(id,nome,un){
     id,nome,unidade:un,
     preco:Number(p.precoVenda1)||0
   };
-  precoVenda.innerText=moeda(produto.preco);
-  infoProduto.innerText=`Unidade: ${un}`;
+  produtoSelecionadoBadge.style.display="inline-block";
+  produtoSelecionadoBadge.textContent=nome;
+  precoVenda.textContent=moeda(produto.preco);
   listaProduto.innerHTML="";
   render();
 }
@@ -211,7 +217,9 @@ buscaIngrediente.onkeyup=async()=>{
   listaIngrediente.innerHTML="";
   j.items.forEach(p=>{
     listaIngrediente.innerHTML+=`
-      <div class="item" onclick="selectIng(${p.id},'${p.descricao}','${p.unidadeDeVenda}')">${p.descricao}</div>`;
+      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
+        ${p.descricao}
+      </div>`;
   });
 };
 
@@ -221,60 +229,72 @@ async function selectIng(id,nome,un){
   const p=j[0]||{};
   ingrediente={
     nome,
-    unidadeOrig:un,
-    custoOrig:Number(p.precoMedioDeReposicao)||Number(p.precoFiscalDeReposicao)||Number(p.custoProduto)||0
+    unidadeOrigem:un,
+    custo:Number(p.precoMedioDeReposicao)||Number(p.custoProduto)||0
   };
-  unOrig.value=un;
-  custoOrig.value=moeda(ingrediente.custoOrig);
+  ingredienteSelecionadoBadge.style.display="inline-block";
+  ingredienteSelecionadoBadge.textContent=nome;
+  custo.value=ingrediente.custo.toFixed(2);
   listaIngrediente.innerHTML="";
 }
 
+/* ===== ADD ===== */
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
-
-  const uUso=UNIDADES[unUso.value];
-  const uOrig=UNIDADES[ingrediente.unidadeOrig.toLowerCase()]||uUso;
-
-  const qtdBase=qtd.value*uUso.fator;
-  const custoUnitBase=ingrediente.custoOrig/uOrig.fator;
-
-  let total=qtdBase*custoUnitBase;
-  if(rend.value) total*=((100-rend.value)/100);
-
-  ingredientes.push({...ingrediente,qtd:qtd.value,unUso:unUso.value,total});
+  const rendimento=(rend.value||100)/100;
+  const total=(qtd.value*ingrediente.custo)*rendimento;
+  ingredientes.push({
+    nome:ingrediente.nome,
+    unidade_origem:ingrediente.unidadeOrigem,
+    unidade_uso:unUso.value,
+    quantidade:qtd.value,
+    custo_origem:ingrediente.custo,
+    custo_calculado:total,
+    rendimento_percentual:rend.value||100
+  });
   cmv+=total;
   qtd.value="";
+  rend.value="";
+  ingrediente=null;
+  ingredienteSelecionadoBadge.style.display="none";
   render();
 }
 
 function render(){
-  listaIng.innerHTML=ingredientes.map(i=>
-    `<div class="ing"><span>${i.nome} ${i.qtd}${i.unUso}</span><strong>${moeda(i.total)}</strong></div>`
-  ).join("");
-  cmvTotal.innerText=moeda(cmv);
-  cmvUnit.innerText=moeda(cmv/(rendimentoFinal.value||1));
-  margem.innerText=produto?.preco?(((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco)*100).toFixed(1)+"%":"0%";
+  listaIng.innerHTML=ingredientes.map(i=>`
+    <div class="ing">
+      <span>${i.nome} (${i.quantidade} ${i.unidade_uso})</span>
+      <strong>${moeda(i.custo_calculado)}</strong>
+    </div>`).join("");
+  cmvTotal.textContent=moeda(cmv);
+  cmvUnit.textContent=moeda(cmv/(rendimentoFinal.value||1));
+  margem.textContent=produto?.preco
+    ?(((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco)*100).toFixed(1)+"%"
+    :"0%";
 }
 
 async function salvar(){
   let fotoUrl=null;
-  if(foto.files[0]){
-    const path=`${Date.now()}-${foto.files[0].name}`;
-    await sb.storage.from("ficha_tecnica").upload(path,foto.files[0]);
-    fotoUrl=sb.storage.from("ficha_tecnica").getPublicUrl(path).data.publicUrl;
+  if(fotoProduto.files[0]){
+    const path=`${Date.now()}-${fotoProduto.files[0].name}`;
+    await sb.storage.from("buffet").upload(path,fotoProduto.files[0]);
+    fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
   }
-  await sb.from("ficha_tecnica").insert({
+  const {data}=await sb.from("buffet").insert({
     produto_id:produto.id,
-    produto_nome:produto.nome,
+    nome:produto.nome,
     preco_venda:produto.preco,
-    foto_url:fotoUrl,
-    receita:ingredientes,
     custo_total:cmv,
     custo_unitario:cmv/(rendimentoFinal.value||1),
+    margem_percentual:margem.textContent.replace("%",""),
     rendimento:rendimentoFinal.value,
-    margem_percentual:margem.innerText
-  });
-  alert("Ficha técnica salva!");
+    foto_url:fotoUrl
+  }).select().single();
+
+  for(const i of ingredientes){
+    await sb.from("buffet_itens").insert({...i,buffet_id:data.id});
+  }
+  alert("Ficha técnica salva com sucesso!");
 }
 </script>
 </body>
