--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -6,102 +6,73 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-:root{
-  --primary:#2563eb;
-  --warn:#fde68a;
-  --bg:#eef2ff;
-  --card:#ffffff;
-  --text:#0f172a;
-}
-*{box-sizing:border-box}
 body{
   margin:0;
-  padding:18px;
-  background:linear-gradient(180deg,#eef2ff,#f8fafc);
+  padding:24px;
+  background:#f1f5f9;
   font-family:Inter,Arial,sans-serif;
 }
 .container{
   max-width:1100px;
   margin:auto;
   background:#fff;
-  border-radius:30px;
-  padding:30px;
-  box-shadow:0 35px 80px rgba(0,0,0,.12);
+  border-radius:24px;
+  padding:32px;
+  box-shadow:0 25px 60px rgba(0,0,0,.1);
 }
-h1,h3{margin:0;font-weight:800}
-h1{margin-bottom:24px}
-h3{margin:26px 0 12px}
-label{font-size:13px;font-weight:800;margin-top:16px;display:block}
+h1{font-size:28px;margin-bottom:24px}
+label{font-weight:700;font-size:13px;margin-top:16px;display:block}
 input,select,button{
   width:100%;
   padding:14px 16px;
-  border-radius:18px;
+  border-radius:14px;
   border:1px solid #cbd5e1;
   margin-top:6px;
 }
 button{
-  background:linear-gradient(180deg,#2563eb,#1e40af);
+  background:#2563eb;
   color:#fff;
   font-weight:800;
   border:none;
   cursor:pointer;
 }
 .lista .item{
-  background:#f1f5f9;
   padding:14px;
-  border-radius:16px;
+  background:#f8fafc;
+  border-radius:12px;
   margin-top:6px;
   cursor:pointer;
 }
-.lista .item:hover{background:#e2e8f0}
 .badge{
-  display:inline-block;
   margin-top:10px;
-  padding:8px 16px;
+  display:inline-block;
+  padding:8px 14px;
   border-radius:999px;
-  background:#e0f2fe;
   font-weight:800;
-  font-size:12px;
+  background:#e0f2fe;
 }
-.badge.warn{background:var(--warn)}
+.badge.warn{background:#fde68a}
 .grid{
   display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
+  grid-template-columns:2fr 1fr 1fr auto;
   gap:8px;
-}
-.ing{
-  background:#f8fafc;
-  border-radius:14px;
-  padding:12px 16px;
-  margin-top:6px;
-  display:flex;
-  justify-content:space-between;
-  font-size:13px;
 }
 .kpis{
   display:grid;
   grid-template-columns:repeat(5,1fr);
   gap:14px;
-  margin-top:26px;
+  margin-top:28px;
 }
 .kpi{
   background:#f8fafc;
-  border-radius:20px;
+  border-radius:18px;
   padding:18px;
   text-align:center;
   font-weight:800;
 }
 .kpi span{display:block;margin-top:6px;font-size:18px}
-img.preview{
-  width:100%;
-  max-height:220px;
-  object-fit:cover;
-  border-radius:20px;
-  margin-top:12px;
-}
 </style>
 </head>
 
@@ -115,26 +86,14 @@ img.preview{
 <div id="listaProduto" class="lista"></div>
 <div id="produtoBadge" class="badge" style="display:none"></div>
 
-<label>Foto do prato</label>
-<input type="file" id="fotoProduto" accept="image/*">
-<img id="previewFoto" class="preview" style="display:none">
-
-<h3>🍳 Ingredientes</h3>
+<h3 style="margin-top:28px">🍳 Ingredientes</h3>
 
 <label>Buscar ingrediente</label>
 <input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
 <div id="listaIngrediente" class="lista"></div>
-<div id="ingredienteBadge" class="badge" style="display:none"></div>
 
 <div class="grid">
   <input id="qtd" type="number" placeholder="Qtd usada">
-  <select id="unUso">
-    <option value="UN">UN</option>
-    <option value="KG">KG</option>
-    <option value="G">G</option>
-    <option value="L">L</option>
-    <option value="ML">ML</option>
-  </select>
   <input id="custo" readonly placeholder="Custo unitário">
   <input id="rend" type="number" placeholder="Rend %">
   <button onclick="addIngrediente()">+</button>
@@ -153,173 +112,105 @@ img.preview{
   <div class="kpi">Margem<span id="margem">—</span></div>
 </div>
 
-<button onclick="salvar()" style="margin-top:28px">Salvar Ficha Técnica</button>
-
 </div>
 
 <script>
-/* ================= SUPABASE ================= */
-const sb = supabase.createClient(
-  "https://dsngsuetvucxeztbgbtb.supabase.co",
-  "sb_publishable_rN6fZXNxnjgwnbXTPXEP5A_7n5Ty9Cp"
-);
-
-/* ================= STATE ================= */
 let produto=null;
 let ingrediente=null;
 let ingredientes=[];
 let cmv=0;
 
-/* ================= HELPERS ================= */
 const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
-/* ================= FOTO ================= */
-fotoProduto.onchange=()=>{
-  if(!fotoProduto.files[0]) return;
-  previewFoto.src=URL.createObjectURL(fotoProduto.files[0]);
-  previewFoto.style.display="block";
-};
+function getPrecoVenda(p){
+  if(!p) return null;
+  if(p.precoVenda1 > 0) return Number(p.precoVenda1);
+  if(p.precoVenda2 > 0) return Number(p.precoVenda2);
+  if(p.precoVenda3 > 0) return Number(p.precoVenda3);
+  return null;
+}
 
-/* ================= BUSCA PRODUTO ================= */
+/* ===== PRODUTO ===== */
 buscaProduto.onkeyup=async()=>{
-  if(buscaProduto.value.length<2){listaProduto.innerHTML="";return;}
+  if(buscaProduto.value.length<2)return;
   const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaProduto.value)}`);
   const j=await r.json();
   listaProduto.innerHTML="";
   j.items.forEach(p=>{
     listaProduto.innerHTML+=`
-      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
+      <div class="item" onclick="selectProduto(${p.id},'${p.descricao.replace(/'/g,"")}')">
         ${p.descricao}
       </div>`;
   });
 };
 
-async function selectProduto(id,nome,un){
+async function selectProduto(id,nome){
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j[0];
+  const preco=getPrecoVenda(p);
 
-  const preco = p && p.precoVenda1 > 0 ? Number(p.precoVenda1) : null;
-
-  produto={id,nome,unidade:un,preco};
+  produto={id,nome,preco};
 
   produtoBadge.style.display="inline-block";
-  produtoBadge.textContent = preco
+  produtoBadge.textContent=preco
     ? `${nome} • ${moeda(preco)}`
     : `${nome} • SEM PREÇO NO VAREJO`;
-  produtoBadge.className = `badge ${!preco?'warn':''}`;
+  produtoBadge.className=`badge ${!preco?'warn':''}`;
 
-  precoVenda.textContent = preco ? moeda(preco) : "SEM PREÇO";
+  precoVenda.textContent=preco?moeda(preco):"SEM PREÇO";
   listaProduto.innerHTML="";
   render();
 }
 
-/* ================= INGREDIENTES ================= */
+/* ===== INGREDIENTES ===== */
 buscaIngrediente.onkeyup=async()=>{
-  if(buscaIngrediente.value.length<2){listaIngrediente.innerHTML="";return;}
+  if(buscaIngrediente.value.length<2)return;
   const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaIngrediente.value)}`);
   const j=await r.json();
   listaIngrediente.innerHTML="";
   j.items.forEach(p=>{
     listaIngrediente.innerHTML+=`
-      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}','${p.unidadeDeVenda||''}')">
+      <div class="item" onclick="selectIng(${p.id},'${p.descricao.replace(/'/g,"")}')">
         ${p.descricao}
       </div>`;
   });
 };
 
-async function selectIng(id,nome,un){
+async function selectIng(id,nome){
   const r=await fetch(`/api/produto-preco/${id}`);
   const j=await r.json();
   const p=j[0];
-
-  const custo =
-    p?.precoMedioDeReposicao > 0 ? p.precoMedioDeReposicao :
-    p?.precoFiscalDeReposicao > 0 ? p.precoFiscalDeReposicao :
-    p?.custoProduto > 0 ? p.custoProduto : 0;
-
-  ingrediente={nome,unidadeOrigem:un,custo};
-
-  ingredienteBadge.style.display="inline-block";
-  ingredienteBadge.textContent=nome;
-  custo.value=moeda(custo);
+  const custo=p.precoMedioDeReposicao||p.precoFiscalDeReposicao||p.custoProduto||0;
+  ingrediente={nome,custo};
+  custoInput.value=moeda(custo);
   listaIngrediente.innerHTML="";
 }
 
-/* ================= ADD INGREDIENTE ================= */
 function addIngrediente(){
-  if(!ingrediente || !qtd.value) return;
-
-  const fatorRendimento=(rend.value||100)/100;
-  const total=(qtd.value*ingrediente.custo)*fatorRendimento;
-
-  ingredientes.push({
-    nome:ingrediente.nome,
-    unidade_origem:ingrediente.unidadeOrigem,
-    unidade_uso:unUso.value,
-    quantidade:qtd.value,
-    custo_origem:ingrediente.custo,
-    custo_calculado:total,
-    rendimento_percentual:rend.value||100
-  });
-
+  if(!ingrediente||!qtd.value)return;
+  const fator=(rend.value||100)/100;
+  const total=qtd.value*ingrediente.custo*fator;
+  ingredientes.push({nome:ingrediente.nome,total});
   cmv+=total;
-  qtd.value=""; rend.value="";
-  ingrediente=null;
-  ingredienteBadge.style.display="none";
+  qtd.value="";rend.value="";
   render();
 }
 
-/* ================= RENDER ================= */
 function render(){
   listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="ing">
-      <span>${i.nome} (${i.quantidade} ${i.unidade_uso})</span>
-      <strong>${moeda(i.custo_calculado)}</strong>
-    </div>`).join("");
-
+    <div class="lista item">${i.nome} — ${moeda(i.total)}</div>
+  `).join("");
   cmvTotal.textContent=moeda(cmv);
   cmvUnit.textContent=moeda(cmv/(rendimentoFinal.value||1));
-
   if(produto?.preco){
     const unit=cmv/(rendimentoFinal.value||1);
     const lucroVal=produto.preco-unit;
     lucro.textContent=moeda(lucroVal);
     margem.textContent=((lucroVal/produto.preco)*100).toFixed(1)+"%";
-  }else{
-    lucro.textContent="—";
-    margem.textContent="—";
   }
-}
-
-/* ================= SALVAR ================= */
-async function salvar(){
-  if(!produto) return alert("Selecione um produto");
-
-  let fotoUrl=null;
-  if(fotoProduto.files[0]){
-    const path=`${Date.now()}-${fotoProduto.files[0].name}`;
-    await sb.storage.from("buffet").upload(path,fotoProduto.files[0]);
-    fotoUrl=sb.storage.from("buffet").getPublicUrl(path).data.publicUrl;
-  }
-
-  const {data}=await sb.from("buffet").insert({
-    produto_id:produto.id,
-    nome:produto.nome,
-    preco_venda:produto.preco,
-    custo_total:cmv,
-    custo_unitario:cmv/(rendimentoFinal.value||1),
-    margem_percentual:produto.preco?((produto.preco-(cmv/(rendimentoFinal.value||1)))/produto.preco*100):null,
-    rendimento:rendimentoFinal.value,
-    foto_url:fotoUrl
-  }).select().single();
-
-  for(const i of ingredientes){
-    await sb.from("buffet_itens").insert({...i,buffet_id:data.id});
-  }
-
-  alert("Ficha técnica salva com sucesso!");
 }
 </script>
+
 </body>
 </html>
