--- a/fichatecnica.html
+++ b/fichatecnica.html
@@ -18,18 +18,20 @@ body{
   max-width:1100px;
   margin:auto;
   background:#fff;
-  border-radius:24px;
-  padding:32px;
-  box-shadow:0 25px 60px rgba(0,0,0,.1);
+  border-radius:28px;
+  padding:36px;
+  box-shadow:0 30px 70px rgba(0,0,0,.12);
 }
-h1{font-size:28px;margin-bottom:24px}
-label{font-weight:700;font-size:13px;margin-top:16px;display:block}
+h1{font-size:30px;margin-bottom:26px}
+h3{margin:28px 0 12px}
+label{font-size:13px;font-weight:800;margin-top:16px;display:block}
 input,select,button{
   width:100%;
   padding:14px 16px;
-  border-radius:14px;
+  border-radius:16px;
   border:1px solid #cbd5e1;
   margin-top:6px;
+  font-size:14px;
 }
 button{
   background:#2563eb;
@@ -41,14 +43,15 @@ button{
 .lista .item{
   padding:14px;
   background:#f8fafc;
-  border-radius:12px;
+  border-radius:14px;
   margin-top:6px;
   cursor:pointer;
 }
+.lista .item:hover{background:#e2e8f0}
 .badge{
-  margin-top:10px;
   display:inline-block;
-  padding:8px 14px;
+  margin-top:10px;
+  padding:10px 18px;
   border-radius:999px;
   font-weight:800;
   background:#e0f2fe;
@@ -56,23 +59,39 @@ button{
 .badge.warn{background:#fde68a}
 .grid{
   display:grid;
-  grid-template-columns:2fr 1fr 1fr auto;
+  grid-template-columns:2fr 1fr 1fr 1fr auto;
   gap:8px;
+}
+.ing{
+  background:#f8fafc;
+  border-radius:14px;
+  padding:12px 16px;
+  margin-top:6px;
+  display:flex;
+  justify-content:space-between;
+  font-size:13px;
 }
 .kpis{
   display:grid;
   grid-template-columns:repeat(5,1fr);
   gap:14px;
-  margin-top:28px;
+  margin-top:30px;
 }
 .kpi{
   background:#f8fafc;
-  border-radius:18px;
+  border-radius:20px;
   padding:18px;
   text-align:center;
   font-weight:800;
 }
 .kpi span{display:block;margin-top:6px;font-size:18px}
+.preview{
+  width:100%;
+  max-height:220px;
+  object-fit:cover;
+  border-radius:20px;
+  margin-top:12px;
+}
 </style>
 </head>
 
@@ -86,14 +105,26 @@ button{
 <div id="listaProduto" class="lista"></div>
 <div id="produtoBadge" class="badge" style="display:none"></div>
 
-<h3 style="margin-top:28px">🍳 Ingredientes</h3>
+<label>Foto do prato</label>
+<input type="file" id="fotoProduto" accept="image/*">
+<img id="previewFoto" class="preview" style="display:none">
+
+<h3>🍳 Ingredientes</h3>
 
 <label>Buscar ingrediente</label>
 <input id="buscaIngrediente" placeholder="Digite o nome do ingrediente">
 <div id="listaIngrediente" class="lista"></div>
+<div id="ingredienteBadge" class="badge" style="display:none"></div>
 
 <div class="grid">
   <input id="qtd" type="number" placeholder="Qtd usada">
+  <select id="unUso">
+    <option>UN</option>
+    <option>KG</option>
+    <option>G</option>
+    <option>L</option>
+    <option>ML</option>
+  </select>
   <input id="custo" readonly placeholder="Custo unitário">
   <input id="rend" type="number" placeholder="Rend %">
   <button onclick="addIngrediente()">+</button>
@@ -124,13 +155,19 @@ const moeda=v=>"R$ "+Number(v||0).toLocaleString("pt-BR",{minimumFractionDigits:
 
 function getPrecoVenda(p){
   if(!p) return null;
-  if(p.precoVenda1 > 0) return Number(p.precoVenda1);
-  if(p.precoVenda2 > 0) return Number(p.precoVenda2);
-  if(p.precoVenda3 > 0) return Number(p.precoVenda3);
+  if(p.precoVenda1>0) return Number(p.precoVenda1);
+  if(p.precoVenda2>0) return Number(p.precoVenda2);
+  if(p.precoVenda3>0) return Number(p.precoVenda3);
   return null;
 }
 
-/* ===== PRODUTO ===== */
+fotoProduto.onchange=()=>{
+  if(!fotoProduto.files[0])return;
+  previewFoto.src=URL.createObjectURL(fotoProduto.files[0]);
+  previewFoto.style.display="block";
+};
+
+/* PRODUTO */
 buscaProduto.onkeyup=async()=>{
   if(buscaProduto.value.length<2)return;
   const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaProduto.value)}`);
@@ -153,9 +190,7 @@ async function selectProduto(id,nome){
   produto={id,nome,preco};
 
   produtoBadge.style.display="inline-block";
-  produtoBadge.textContent=preco
-    ? `${nome} • ${moeda(preco)}`
-    : `${nome} • SEM PREÇO NO VAREJO`;
+  produtoBadge.textContent=preco?`${nome} • ${moeda(preco)}`:`${nome} • SEM PREÇO NO VAREJO`;
   produtoBadge.className=`badge ${!preco?'warn':''}`;
 
   precoVenda.textContent=preco?moeda(preco):"SEM PREÇO";
@@ -163,7 +198,7 @@ async function selectProduto(id,nome){
   render();
 }
 
-/* ===== INGREDIENTES ===== */
+/* INGREDIENTE */
 buscaIngrediente.onkeyup=async()=>{
   if(buscaIngrediente.value.length<2)return;
   const r=await fetch(`/api/produtos-busca?q=${encodeURIComponent(buscaIngrediente.value)}`);
@@ -183,10 +218,13 @@ async function selectIng(id,nome){
   const p=j[0];
   const custo=p.precoMedioDeReposicao||p.precoFiscalDeReposicao||p.custoProduto||0;
   ingrediente={nome,custo};
-  custoInput.value=moeda(custo);
+  ingredienteBadge.style.display="inline-block";
+  ingredienteBadge.textContent=nome;
+  custo.value=moeda(custo);
   listaIngrediente.innerHTML="";
 }
 
+/* ADD */
 function addIngrediente(){
   if(!ingrediente||!qtd.value)return;
   const fator=(rend.value||100)/100;
@@ -194,20 +232,29 @@ function addIngrediente(){
   ingredientes.push({nome:ingrediente.nome,total});
   cmv+=total;
   qtd.value="";rend.value="";
+  ingrediente=null;
+  ingredienteBadge.style.display="none";
   render();
 }
 
 function render(){
   listaIng.innerHTML=ingredientes.map(i=>`
-    <div class="lista item">${i.nome} — ${moeda(i.total)}</div>
-  `).join("");
+    <div class="ing">
+      <span>${i.nome}</span>
+      <strong>${moeda(i.total)}</strong>
+    </div>`).join("");
+
   cmvTotal.textContent=moeda(cmv);
   cmvUnit.textContent=moeda(cmv/(rendimentoFinal.value||1));
+
   if(produto?.preco){
     const unit=cmv/(rendimentoFinal.value||1);
     const lucroVal=produto.preco-unit;
     lucro.textContent=moeda(lucroVal);
     margem.textContent=((lucroVal/produto.preco)*100).toFixed(1)+"%";
+  }else{
+    lucro.textContent="—";
+    margem.textContent="—";
   }
 }
 </script>
